# secz

./: .gitignore  Cargo.toml  README.md  file.txt  secz.yaml  sonar-project.properties
src/: cli.rs  main.rs
src/commands/: scan.rs
tests/: cli_tests.rs
