[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = {}
clap = { version = "4.4.8", features = ["derive"] }
indicatif = { version = "0.17.7" }
log = { version = "0.4.20" }
env_logger = {}
